--- a/src/index.css
+++ b/src/index.css
@@ -19,20 +19,34 @@
 }
 
 .icon-white {
-  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%);
+  /* filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%); */
+  filter: invert(75%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%);
+
 }
 
 .icon-white:hover {
-  filter: invert(72%) sepia(47%) saturate(5579%) hue-rotate(201deg) brightness(93%) contrast(83%);
-  /* background-color: white; */
+  /* filter: invert(72%) sepia(47%) saturate(5579%) hue-rotate(201deg) brightness(93%) contrast(83%); */
+  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%);
+
+
 }
 
 .icon {
   width: 1.25rem;
+  filter: invert(14%) sepia(8%) saturate(789%) hue-rotate(174deg) brightness(90%) contrast(85%);
+
 }
 
 .icon:hover {
-  filter: invert(19%) sepia(64%) saturate(3769%) hue-rotate(237deg) brightness(89%) contrast(101%);
+  filter: none;
+  /* filter: invert(14%) sepia(8%) saturate(789%) hue-rotate(174deg) brightness(90%) contrast(85%); */
+  /* filter: invert(19%) sepia(64%) saturate(3769%) hue-rotate(237deg) brightness(89%) contrast(101%); */
+}
+
+.inverted-text { 
+  color: #f00;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
 }
 
 .body {
