--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@
   @apply lg:px-20 xl:px-[20rem] px-2;
 }
 
+.hero-text {
+  @apply md:text-7xl text-4xl;
+}
+
 .gray-bg-custom {
   @apply bg-[#F2F1EE];
 }
@@ -115,4 +119,18 @@
 
 .title {
   @apply md:text-3xl text-xl font-semibold;
+}
+
+.animate {
+  @apply delay-500 ease-in-out duration-1000;
+}
+
+.disappear {
+  @apply opacity-0 -translate-x-full;
+
+}
+
+.appear {
+  @apply opacity-100;
+
 }
