feat: update design, text size, paddings, margins, add hero img

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Peralta&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Peralta&display=swap");
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -20,21 +20,20 @@
 
 .icon-white {
   /* filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%); */
-  filter: invert(75%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%);
-
+  filter: invert(75%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%)
+    contrast(101%);
 }
 
 .icon-white:hover {
   /* filter: invert(72%) sepia(47%) saturate(5579%) hue-rotate(201deg) brightness(93%) contrast(83%); */
-  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg) brightness(108%) contrast(101%);
-
-
+  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(166deg)
+    brightness(108%) contrast(101%);
 }
 
 .icon {
   width: 1.25rem;
-  filter: invert(14%) sepia(8%) saturate(789%) hue-rotate(174deg) brightness(90%) contrast(85%);
-
+  filter: invert(14%) sepia(8%) saturate(789%) hue-rotate(174deg)
+    brightness(90%) contrast(85%);
 }
 
 .icon:hover {
@@ -43,7 +42,7 @@
   /* filter: invert(19%) sepia(64%) saturate(3769%) hue-rotate(237deg) brightness(89%) contrast(101%); */
 }
 
-.inverted-text { 
+.inverted-text {
   color: #f00;
   -webkit-filter: invert(100%);
   filter: invert(100%);
@@ -53,24 +52,27 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Rubik', sans-serif;
-  
+  font-family: "Rubik", sans-serif;
 }
 
 .bg-quaternary:hover {
-  background-color: #6385FF;
+  background-color: #6385ff;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+p {
+  @apply md:text-xl text-base;
+}
+
 .x-spacing {
   @apply lg:px-20 xl:px-[20rem] px-2;
 }
 
 .hero-text {
-  @apply md:text-7xl text-4xl;
+  @apply md:text-6xl text-4xl;
 }
 
 .gray-bg-custom {
@@ -78,43 +80,43 @@
 }
 
 .orange-text-custom {
-  @apply text-[#7289da]
+  @apply text-[#7289da];
 }
 
 .hero-title {
-  font-family: 'Peralta', cursive;
+  font-family: "Peralta", cursive;
 }
 
 .bg-primary {
-  @apply bg-[#FFFFFF]
+  @apply bg-[#FFFFFF];
 }
 
 .text-violet-primary {
-  @apply text-[#7289DA]
+  @apply text-[#7289DA];
 }
 
 .text-violet-secondary {
-  @apply text-[#6385FF]
+  @apply text-[#6385FF];
 }
 
 .bg-secondary {
-  @apply bg-[#99AAB5]
+  @apply bg-[#99AAB5];
 }
 
 .bg-tertiary {
-  @apply bg-[#2C2F33]
+  @apply bg-[#2C2F33];
 }
 
 .bg-quaternary {
-  @apply bg-[#7289DA]
+  @apply bg-[#7289DA];
 }
 
 .bg-quinary {
-  @apply bg-[#6385FF]
+  @apply bg-[#6385FF];
 }
 
 .text-black-custom {
-  @apply text-[#2C2F33]
+  @apply text-[#2C2F33];
 }
 
 .title {
@@ -127,10 +129,16 @@
 
 .disappear {
   @apply opacity-0 -translate-x-full;
-
 }
 
 .appear {
   @apply opacity-100;
+}
 
+.heading {
+  @apply md:text-lg text-base font-bold uppercase;
+}
+
+.sub-heading {
+  @apply md:text-5xl text-3xl pt-4 pb-8;
 }
