--- a/src/index.css
+++ b/src/index.css
@@ -62,11 +62,11 @@
 .image-bg {
   position: relative;
   background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
   width: 100%;
-  height: 100vh;
+  /* background: center; */
 }
 
 .image-behind {
