--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Peralta&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Peralta&display=swap');
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -52,7 +52,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Rubik", sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 .bg-quaternary:hover {
@@ -81,6 +81,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.html-string a {
+  @apply text-blue-400 underline hover:text-blue-500;
+}
 p {
   @apply md:text-xl text-base;
 }
@@ -102,7 +105,7 @@ p {
 }
 
 .hero-title {
-  font-family: "Peralta", cursive;
+  font-family: 'Peralta', cursive;
 }
 
 .bg-primary {
